get user moved to user service
