# api.yaml
@@ -4,17 +4,6 @@ info:
   version: 1.0
 paths:
   /user:
-    get:
-      operationId: getUserV1
-      summary: Get a user
-      responses:
-        '200':
-          description: |-
-            200 response
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
     post:
       operationId: createNewUser
       summary: Create a new user
@@ -29,6 +18,25 @@ paths:
         '201':
           description: |-
             201 response
+  /user/{uuid}:
+    get:
+      operationId: getUserV1
+      summary: Get a user
+      parameters:
+        - in: path
+          name: uuid
+          description: a user's unique ID
+          schema:
+            type: string
+            format: uuid
+      responses:
+        '200':
+          description: |-
+            200 response
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
   /session:
     post:
       operationId: createNewSesssion
@@ -172,6 +180,35 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Password'
+    PublicUser:
+      type: object
+      required:
+        - uuid
+        - username
+      properties:
+        uuid:
+          type: string
+          format: uuid
+        name:
+          type: string
+        username:
+          type: string
+        profile_pic:
+          type: string
+        bio_message:
+          type: string
+        birthday:
+          type: string
+          format: birthday
+        address_street:
+          type: string
+        address_city:
+          type: string
+        address_zip:
+          type: string
+        created_at:
+          type: string
+          format: date-time
     NewUser:
       type: object
       required:
